# NavetasResearch

./: README.md
scripts/: gen_data.py  gen_data_createDataForTests.py  navetusREADME_spec.txt
src/: CMakeLists.txt  currentMedianFilter.cpp  currentMedianFilter.h  readData.cpp  readData.h  readDataMedianFilter.cpp
src/tests/: CMakeLists.txt  test_medianFilter.cpp  test_readData.cpp
